# linux_orca

./: .gitignore  README.md  environment.yml  install.sh  main.py  orcainit  pyproject.toml  setup.sh
data/amide_pnas/: datasetS01.xlsx  datasetS02.xlsx
data/smarts/: Acid_SMARTS.csv  Acid_SMARTS_v2.csv  Amine_SMARTS.csv  Amine_SMARTS_v2.csv
install/janpa/: install.sh  run.sh
install/orca/: README.md  install.sh  orcainit  test.inp
install/turbomole/: README.md  turboinit
linux_qm/: desc.py
linux_qm/desc/: electronic.py  smarts.py
linux_qm/qm/: config.py  driver.py  xtb.py
linux_qm/qm/crest/: crest.py
linux_qm/qm/orca/: geom.sh  (+3 more)
linux_qm/src/: core.py  desc.py  render.py  run.py  rxn_fp.py  util.py
notebooks/: 01_crest.ipynb  02_orca.ipynb  03_amides.ipynb  04_dbstep.ipynb  05_rxn_descriptors.ipynb  06_smarts.ipynb  07_rxn_fp.ipynb  08_reaction_ts.ipynb  09_auto_ts_search.ipynb  electronic_descriptors.py  job.py  queue.py  run.py  test.ipynb  xtb.py
qm/: 01 - molli.py  01_crest.py  readme.md  setup.sh  timing  timing.sh
qm/.crest_tmp/: .history.xyz  bondlengths  coord  coord.original  cre_members  cregen_0.tmp  cregen_1.tmp  crest.energies  crest_ensemble.xyz  gfnff_adjacency  gfnff_charges  struc.xyz  struc_01.xyz  wbo  xtbopt.xyz  xtbtopo.mol
qm/crest/: 01_crest.py  crest.py
qm/janpa/: install.sh
qm/orca/: run.sh  test.densities  test.gbw  test.ges  test.inp  test_property.txt
qm/turbomole/: mix_bs.sh  run.sh  setup.sh  turboinit  update_bs.sh
scripts/: electronic_descriptors.py  job.py  job1.sh  timing  xtb.py
turbomole/: setup.sh
(+13 files in other folders)
